@@ -1,3 +1,9 @@
+2004-10-27  Mark D. Baushke  <mdb@cvshome.org>
+
+	* infback.c (out_desc): Security Bugfixes (CAN-2004-0797,
+	OpenPKG-SA-2004.038-zlib).
+	* inflate.c (inflate): Ditto.
+
 2004-10-21  Conrad T. Pino  <Conrad@Pino.com>
 
 	* libz.dsp: Add "crc32.h" and "inflate.h" to project.
